# Gronor_OpenMP

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README  README.md  crusher_compile  crusher_compile_amd  crusher_compile_cray  frontier_compile  frontier_compile_acc_hip  frontier_compile_roc  frontier_compile~  gronor_mods.F  gronor_testcases.tar  install.sh  juwels_compile  juwels_compile_scorep  linux_compile  linux_compile_intel  linux_compile_nvhpc  maginet_compile  summit_compile  vega_compile
TODO/: mpi_openmp_openacc.F90
attic/gnome/: gronor_abort.F90  gronor_calculate.F90  gronor_correlation_energy.F90  gronor_determine_nci.F90  gronor_environment.F90  gronor_evd.F90  gronor_gntwo.F90  gronor_input.F90  gronor_main.F90  gronor_master.F90  gronor_memory_usage.F90  gronor_moover.F90  gronor_multipoles_nuclear.F90  gronor_number_integrals.F90  gronor_parallel_integral_input.F90  gronor_permutations.F90  gronor_print_dipole_moments.F90  gronor_quicksort.F90  gronor_svd.F90  gronor_tramat2.F90  gronor_tranout.F90  gronor_warning.F90  gronor_worker.F90
aux/: README.rdcho  README.rdtraint  addvect.f  civec.py  common_basis.f  corr_shift.f  rdtraint.f
aux/addvect/: addvect.f
aux/alter/: alter.f90
aux/aux_libs/: aux_mods.F
aux/common_basis/: common_basis.f
aux/corr_shift/: corr_shift.f  corr_shift.f90
aux/det_header/: det_header.f
aux/ecorradd/: ecorradd.f
aux/make_input/: make_input.F
aux/merge_xyz/: merge_xyz.f
aux/mergexyz/: mergexyz.f
aux/molcas_input/: molcas_input.f90
aux/rdcho/: rdcho.f
aux/rdtraint/: rdtraint.f
aux/reorder/: reorder.f90
doc/: Doxyfile
examples/Benzene_dimer/: benzeneA.input  benzeneCB.input  benzeneD.input  benzeneM.input  runall
examples/Diazadiboronine_dimer/: DADB.inp  DADBA.input  DADBCB.input  DADBD.input  DADBM.input  runall
examples/Ethene_dimer/: etheneA.input  etheneCB.input  etheneD.input  etheneM.input  ethene_test.inp  runall
examples/Naphthalene_dimer/: naphthaleneA.input  naphthaleneCB.input  naphthaleneD.input  naphthaleneM.input  naphthalene_test.inp  runall
examples/Propene_dimer/: propeneA.input  propeneCB.input  propeneD.input  propeneM.input  propene_test.inp  runall
include/: gronor_config.h.in  gronor_version.h.in
java/: ExtensionFilter.java  GronOR_Fragment.java  GronOR_Molcas.java  GronOR_NWChem.java  GronOR_Project.java  GronOR_Window.java  PrintfWriter.java  extensionFilter.java  gronor_Analysis.java  gronor_Fragment.java  gronor_Main.java  gronor_Project.java  gronor_Window.java
molcas/addvect/: addvect.f
molcas/aux_libs/: aux_mods.F
molcas/common_basis/: common_basis.f
molcas/corr_shift/: corr_shift.f
molcas/gcommon/: gcommon.f90
molcas/grotate/: grotate.f90
molcas/ovlf/: ovlf.f
molcas/rdcho/: rdcho.f
molcas/rdtraint/: rdtraint.f
molcas/rotharm/: rotharm.f90
molcas/rotharm3/: rotharm3.f90
molcas_interface/addvect/: addvect.f90
molcas_interface/corr_shift/: corr_shift.f  corr_shift.f90
molcas_interface/dipro/: dipro.f90
molcas_interface/gcommon/: gcommon.f90
molcas_interface/grotate/: grotate.f90
molcas_interface/heff/: heff.f90
molcas_interface/locactive/: locactive.f90
molcas_interface/michl/: michl.f90
molcas_interface/nto/: nto.f90
molcas_interface/orthoFMO/: orthoFMO.f90
molcas_interface/ovlf/: ovlf.f90
molcas_interface/rdcho/: rdcho.F90  rdcho.f90
molcas_interface/rdtraint/: rdtraint  rdtraint.f90
scripts/: crusher_compile  crusher_compile_amd  crusher_compile_cray  crusher_compile_gnu  frontier_compile  frontier_compile_acc  frontier_compile_acc_hip  frontier_compile_craylibsci  frontier_compile_hip  frontier_compile_roc  frontier_compile_roc631  juwels_compile  juwels_compile_scorep  linux_compile_intel  linux_compile_intel_openmpi  linux_compile_nvhpc  linux_molcas_compile_intel  maginet_compile  presidio_compile  summit_compile  summit_compile_nvhpc  summit_compile_xl  test.py  vega_compile
src/blas/double/: daxpy.f  dcabs1.f  dcopy.f  ddot.f  dgemm.f  dgemv.f  dger.f  dnrm2.f  drot.f  dscal.f  dspmv.f  dspr.f  dswap.f  dsymm.f  dsymv.f  dsyr.f  dsyr2.f  dsyr2k.f  dsyrk.f  dtrmm.f  dtrmv.f  dtrsm.f  dtrsv.f  dzasum.f  dznrm2.f  idamax.f  izamax.f  lsame.f  xerbla.F  xerbla.f  zaxpy.f  zcopy.f  zdotc.f  zdotu.f  zdrot.f  zdscal.f  zgemm.f  zgemv.f  zgerc.f  zgeru.f  (+15 more)
src/blas/single/: caxpy.f  ccopy.f  cdotc.f  cdotu.f  cgemm.f  cgemv.f  cgerc.f  cgeru.f  chemm.f  chemv.f  cher2.f  cher2k.f  cherk.f  cscal.f  csrot.f  csscal.f  cswap.f  ctrmm.f  ctrmv.f  ctrsm.f  ctrsv.f  icamax.f  isamax.f  sasum.f  saxpy.f  scabs1.f  scasum.f  scnrm2.f  scopy.f  sdot.f  sgemm.f  sgemv.f  sger.f  snrm2.f  srot.f  sscal.f  sspr.f  (+13 more)
src/commonbasis/: commonbasis.F
src/gnome/: #gronor_main.F90#  #gronor_solver_init.F90#  CMakeLists.txt  clebsch_gordan.F  con  corr_ener.F  determine_maxcib.F  determine_nci.F  findmaxdet.F  g.tgz  gfunct.F  gronor_abort.F  gronor_abort.F90  gronor_assign_managers.F90  gronor_assign_managers.F90~  gronor_calculate.F  gronor_calculate.F90  gronor_check_duplicate.F  gronor_check_integrals.F  gronor_cml.F  gronor_cml.F90  gronor_cofac1.F  gronor_cofac1.F90  gronor_cororb.F  gronor_cororb.F90  gronor_correlation_energy.F  gronor_correlation_energy.F90  gronor_determine_maxcib.F  gronor_determine_maxcib.F~  gronor_determine_nci.F  gronor_determine_nci.f90  gronor_dipole.F  gronor_dipole.F90  gronor_environment.F  gronor_environment.F90  gronor_evd.F90  gronor_generate_microstate.F90  gronor_generate_microstate.f90  gronor_gnome.F  gronor_gnome.F90  (+86 more)
src/gronor/: gronor.F
src/gui/: Graph.java  gronor_Project.java  gronor_Window.java
src/inp/: input_util.F  input_util.F90
src/transvec/: transvec.F
src/utils/: bubble_sort.F  clebsch_gordan.F  clebsch_gordan.F90  context_f2c.c  dgefa.f  dsum.f  errquit.F  icopy.f  linux_random.c  linux_setfpucw.c  linux_shift.F  normalize.f90  pascal.F  svd.F  svd.F90  tps_cutils.c  tps_utils.F  tps_utils.F90  tql2.F  tql2.F90  tred2.F  tred2.F90  util_bitops.F  util_cflush.c  util_cpusec.F  util_date.c  util_getarg.F  util_pack.F  util_wallsec.F
tests/: gronor_testcases.tar
(+418 files in other folders)
